--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,9 @@ TWILIO_AUTH_TOKEN=your_twilio_auth_token
 TWILIO_PHONE_NUMBER=+1234567890
 TWILIO_NUMBER_POOL=+15551230001,+15551230002,+15551230003
 TWILIO_A2P_ENABLED=false
+ADMIN_NOTIFY_PHONE=
+TELEGRAM_BOT_TOKEN=
+TELEGRAM_CHAT_ID=
 
 SMS_MONTHLY_LIMIT_PER_NUMBER=10000
 SMS_RATE_LIMIT_PER_MIN=25
