feat(followups): queue retries/backoff; admin dashboard; pending API; migrations updated

--- a/.env.example
+++ b/.env.example
@@ -18,5 +18,6 @@ SMS_MONTHLY_LIMIT_PER_NUMBER=10000
 SMS_RATE_LIMIT_PER_MIN=25
 SMS_QUIET_HOURS_START=8
 SMS_QUIET_HOURS_END=21
+FOLLOWUP_MAX_ATTEMPTS=3
 
 NEXT_PUBLIC_APP_URL=http://localhost:3000
