feat(deals+crm): printable deal summary; auto-dead; auto-tagging; follow-up metadata; value estimate API

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,7 @@ TWILIO_A2P_ENABLED=false
 ADMIN_NOTIFY_PHONE=
 TELEGRAM_BOT_TOKEN=
 TELEGRAM_CHAT_ID=
+DEAD_LEAD_AFTER_DAYS=21
 
 SMS_MONTHLY_LIMIT_PER_NUMBER=10000
 SMS_RATE_LIMIT_PER_MIN=25
